--- a/src/stone-sheet-cutter/style.css
+++ b/src/stone-sheet-cutter/style.css
@@ -3,15 +3,70 @@
     height: 100%;
 }
 
+.screen-container {
+    height: 100vh;
+    display: grid;
+    place-items: center;
+    perspective: 110vh;
+}
+
 .game-container {
     display: grid;
     grid-auto-columns: max-content;
     grid-gap: 30px;
-    place-content: center;
-    height: 100vh;
+
+    grid-row: 1 / 1;
+    grid-column: 1 / 1;
 }
 
-.status {
+.message-container {
+    display: grid;
+    grid-auto-columns: max-content;
+    grid-gap: 30px;
+
+    grid-row: 1 / 1;
+    grid-column: 1 / 1;
+}
+
+.flip-game-board-forward {
+    animation: flip-forward-90 500ms ease-in both;
+}
+
+.flip-message-forward {
+    animation: flip-backward-90 500ms ease-in both;
+}
+
+.flip-game-board-backward {
+    animation: flip-forward-90 500ms ease-in both reverse;
+}
+
+.flip-message-backward {
+    animation: flip-backward-90 500ms ease-in both reverse;
+}
+
+@keyframes flip-forward-90 {
+    from {
+        transform: rotate3d(0, 1, 0, 0deg);
+    }
+    to {
+        transform: rotate3d(0, 1, 0, 90deg);
+    }
+}
+
+@keyframes flip-backward-90 {
+    from {
+        transform: rotate3d(0, 1, 0, -90deg);
+    }
+    to {
+        transform: rotate3d(0, 1, 0, 0deg);
+    }
+}
+
+.display-none {
+    display: none;
+}
+
+.status-text {
     font-size: 50px;
     color: aliceblue;
     text-align: center;
@@ -28,16 +83,25 @@
 .action {
     font-size: 100px;
     padding: 100px;
-    background-color: #aeaeae;
+
     width: max-content;
     border-radius: 50%;
-    cursor: pointer;
-
-    transition: 150ms ease-in-out;
-    user-focus: none;
 }
 
-.action:hover {
+button {
+    font-size: 30px;
+    font-weight: bold;
+    padding: 10px;
+
+    width: max-content;
+    border-radius: 4px;
+
+    background-color: #aeaeae;
+    cursor: pointer;
+    transition: 150ms ease-in-out;
+}
+
+button:hover {
     filter: brightness(0.8);
     transform: translateY(1%);
 }
