--- a/src/tic-tac-toe/style.css
+++ b/src/tic-tac-toe/style.css
@@ -56,7 +56,7 @@
 }
 
 .tile:hover {
-    background-color: #8885;
+    background-color: #8882;
     filter: brightness(0.8);
     transform: translateY(1%);
 }
@@ -73,29 +73,20 @@
 
 @media only screen and (max-width: 1024px) {
     .tile {
-        font-size: 70px;
-        padding: 50px;
+        font-size: 45px;
+        width: 70px;
+        height: 70px;
     }
 }
 
 @media only screen and (max-width: 768px) {
-    .tiles-container {
-        grid-auto-flow: row;
-        justify-content: center;
-    }
-
-    .tile {
-        font-size: 50px;
-        padding: 20px;
-    }
-
     .status-text {
         font-size: 30px;
     }
 }
 
 .tron-square {
-    background-color: #639;
+    background-color: #A4E;
     animation: clipPathDrawSquare 1s ease-in-out both;
 }
 
@@ -118,4 +109,8 @@
 
 .overglow-bloom {
     animation: glowTile 1s cubic-bezier(0.21, 2.35, 0.85,-0.4) both alternate-reverse;
+}
+
+.aftermath-message {
+    width: 80vw;
 }
