--- a/src/App.css
+++ b/src/App.css
@@ -31,8 +31,6 @@ button:focus {
   outline: 0;
 }
 
-
-
 @media only screen and (max-width: 1024px) {
 }
 
@@ -43,9 +41,8 @@ button:focus {
   }
 }
 
-
 .navbar {
-  position: absolute;
+  height: max-content;
   display: grid;
   grid-gap: 8px;
   padding: 8px;
@@ -61,44 +58,9 @@ button:focus {
 
 a {
   color: black;
+  text-decoration: none;
 }
 
+.app-container {
 
-
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
