--- a/src/tic-tac-toe/style.css
+++ b/src/tic-tac-toe/style.css
@@ -13,7 +13,7 @@
 
     grid-row: 1 / 1;
     grid-column: 1 / 1;
-    justify-content: center;
+    place-content: center;
 }
 
 .message-container {
