--- a/src/App.scss
+++ b/src/App.scss
@@ -20,15 +20,15 @@ button {
   background-color: #aeaeae;
   cursor: pointer;
   transition: 150ms ease-in-out;
-}
 
-button:hover {
-  filter: brightness(0.8);
-  transform: translateY(1%);
-}
+  &:hover {
+    filter: brightness(0.8);
+    transform: translateY(1%);
+  }
 
-button:focus {
-  outline: 0;
+  &:focus {
+    outline: 0;
+  }
 }
 
 @media only screen and (max-width: 1024px) {
