--- a/src/stone-sheet-cutter/style.scss
+++ b/src/stone-sheet-cutter/style.scss
@@ -8,16 +8,16 @@
 
 .action {
     font-size: 100px;
-    padding: 100px;
-
-    width: max-content;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
 }
 
 @media only screen and (max-width: 1024px) {
     .action {
         font-size: 70px;
-        padding: 50px;
+        width: 140px;
+        height: 140px;
     }
 }
 
@@ -29,7 +29,8 @@
 
     .action {
         font-size: 50px;
-        padding: 20px;
+        width: 100px;
+        height: 100px;
     }
 
     .status-text {
